2015-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Point to gettext manual html nodes instead of
	  the full gettext manual.

2014-12-31 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Cleanup man page. Thanks to Benno Schulenberg.

2014-12-30 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Changed some messages for better translations.

2014-12-26 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix. On Windows when option -gb is used, option -m must
	  add GB18030 BOM i.s.o. UTF-8 BOM.
	* test/gb18030.t: Make tests working for Windows version.

2014-12-24 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix. In a GB18030 locale, option -m must add GB18030 BOM
	  i.s.o. UTF-8 BOM.
	* test/gb18030.t: New tests for GB18030.

2014-12-23 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Update section GB18030.

2014-12-08 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: When the input file is UTF-16, the input and output
	  formats are printed.

2014-12-06 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: On Unix/Linux convert UTF-16 to the locale encoding. It is
	  no longer required that the locale encoding is UTF-8. When
	  conversion is not possible an error will occur and conversion will be
	  skipped.

2014-12-06 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c, common.h: Support conversion of UTF-16 to GB18030.
	* man/man1/dos2unix.pod: Update with info about GB18030.

2014-11-09 Yasuaki Taniguchi <yasuakit@gmail.com>
	* po/ja.po: New Japanese translation of the UI messages.

2014-10-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.1

2014-09-29 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fixed possible uninitialized use of variable bomtype_orig.
	* djgpp.mak: Fix time stamps mac2unix/unix2mac after make strip.

2014-09-22 Erwin Waterlander <waterlan@xs4all.nl>
	* mingw32.mak, mingw64.mak: Fixed setting path to CRT_glob.o.
	  Works now independent of MSYS2 install path.
