@@ -1,4 +1,4 @@
 DOS2UNIX_VERSION = 7.2-beta4
 DOS2UNIX_VERSION_SHORT = 72b4
-DOS2UNIX_DATE = 2015-01-02
+DOS2UNIX_DATE = 2015-01-03
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
